--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -1,16 +1,16 @@
 resources:
 #- argocd/consolelink.yaml
-#- argocd/consolenotification.yaml
-#- argocd/namespace-ibm-common-services.yaml
+- argocd/consolenotification.yaml
+- argocd/namespace-ibm-common-services.yaml
 #- argocd/namespace-ci.yaml
 #- argocd/namespace-dev.yaml
 #- argocd/namespace-staging.yaml
 #- argocd/namespace-prod.yaml
 #- argocd/namespace-cloudpak.yaml
 #- argocd/namespace-istio-system.yaml
-#- argocd/namespace-openldap.yaml
-#- argocd/namespace-sealed-secrets.yaml
-#- argocd/namespace-tools.yaml
+- argocd/namespace-openldap.yaml
+- argocd/namespace-sealed-secrets.yaml
+- argocd/namespace-tools.yaml
 #- argocd/namespace-instana-agent.yaml
 #- argocd/namespace-robot-shop.yaml
 #- argocd/namespace-openshift-serverless.yaml
@@ -21,15 +21,15 @@ resources:
 #- argocd/namespace-spp.yaml
 #- argocd/namespace-spp-velero.yaml
 #- argocd/namespace-baas.yaml
-#- argocd/namespace-db2.yaml
+- argocd/namespace-db2.yaml
 #- argocd/namespace-mq.yaml
 #- argocd/namespace-b2bi-prod.yaml
 #- argocd/namespace-b2bi-nonprod.yaml
 #- argocd/namespace-pem.yaml
 #- argocd/namespace-ssp.yaml
-#- argocd/serviceaccounts-ibm-common-services.yaml
-#- argocd/serviceaccounts-tools.yaml
-#- argocd/serviceaccounts-db2.yaml
+- argocd/serviceaccounts-ibm-common-services.yaml
+- argocd/serviceaccounts-tools.yaml
+- argocd/serviceaccounts-db2.yaml
 #- argocd/serviceaccounts-mq.yaml
 #- argocd/serviceaccounts-b2bi-prod.yaml
 #- argocd/serviceaccounts-b2bi-nonprod.yaml
