--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -87,7 +87,7 @@ resources:
 #- argocd/instances/ibm-pem.yaml
 
 # Required for IBM MQ
-#- argocd/instances/openldap.yaml
+- argocd/instances/openldap.yaml
 # Required for IBM ACE, IBM MQ
 #- argocd/operators/cert-manager.yaml
 #- argocd/instances/cert-manager-instance.yaml
