--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -19,7 +19,7 @@ resources:
 #- argocd/instances/ibm-platform-navigator-instance.yaml
 
 ## Cloud Pak for Business Automation
-- argocd/operators/ibm-cp4a-operator.yaml
+# - argocd/operators/ibm-cp4a-operator.yaml
 #- argocd/operators/ibm-db2u-operator.yaml
 #- argocd/operators/ibm-process-mining-operator.yaml
 #- argocd/instances/ibm-process-mining-instance.yaml
