--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -2,46 +2,18 @@ resources:
 #- argocd/consolelink.yaml
 - argocd/consolenotification.yaml
 - argocd/namespace-ibm-common-services.yaml
-#- argocd/namespace-ci.yaml
-#- argocd/namespace-dev.yaml
-#- argocd/namespace-staging.yaml
-#- argocd/namespace-prod.yaml
-#- argocd/namespace-cloudpak.yaml
-#- argocd/namespace-istio-system.yaml
 - argocd/namespace-openldap.yaml
 - argocd/namespace-sealed-secrets.yaml
 - argocd/namespace-tools.yaml
-#- argocd/namespace-instana-agent.yaml
-#- argocd/namespace-robot-shop.yaml
-#- argocd/namespace-openshift-serverless.yaml
-#- argocd/namespace-knative-eventing.yaml
-#- argocd/namespace-knative-serving.yaml
-#- argocd/namespace-knative-serving-ingress.yaml
-#- argocd/namespace-openshift-storage.yaml
-#- argocd/namespace-spp.yaml
-#- argocd/namespace-spp-velero.yaml
-#- argocd/namespace-baas.yaml
 - argocd/namespace-db2.yaml
-#- argocd/namespace-mq.yaml
-#- argocd/namespace-b2bi-prod.yaml
-#- argocd/namespace-b2bi-nonprod.yaml
-#- argocd/namespace-pem.yaml
-#- argocd/namespace-ssp.yaml
+- argocd/namespace-cp4ba.yaml
+- argocd/namespace-kube-system.yaml
+- argocd/namespace-norootsquash.yaml
 - argocd/serviceaccounts-ibm-common-services.yaml
 - argocd/serviceaccounts-tools.yaml
 - argocd/serviceaccounts-db2.yaml
-#- argocd/serviceaccounts-mq.yaml
-#- argocd/serviceaccounts-b2bi-prod.yaml
-#- argocd/serviceaccounts-b2bi-nonprod.yaml
-#- argocd/serviceaccounts-pem.yaml
-#- argocd/sfg-b2bi-clusterwide.yaml
-#- argocd/pem-b2bi-clusterwide.yaml
-#- argocd/scc-wkc-iis.yaml
-#- argocd/norootsquash.yaml
-#- argocd/daemonset-sync-global-pullsecret.yaml
-#- argocd/storage.yaml
-#- argocd/infraconfig.yaml
-#- argocd/machinesets.yaml
+- argocd/serviceaccounts-cp4ba.yaml
+- argocd/serviceaccounts-norootsquash.yaml
 patches:
 - target:
     group: argoproj.io
