--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -2,10 +2,10 @@ resources:
 - argocd/operators/ibm-cp4a-operator.yaml
 # - argocd/instances/ibm-cp4ba-odm.yaml
 ## IBM Foundational Services / Common Services
-- argocd/operators/ibm-foundations.yaml
-- argocd/instances/ibm-foundational-services-instance.yaml
-- argocd/operators/ibm-automation-foundation-core-operator.yaml
-- argocd/operators/ibm-automation-foundation-operator.yaml
+# - argocd/operators/ibm-foundations.yaml
+# - argocd/instances/ibm-foundational-services-instance.yaml
+# - argocd/operators/ibm-automation-foundation-core-operator.yaml
+# - argocd/operators/ibm-automation-foundation-operator.yaml
 #- argocd/operators/ibm-license-service-operator.yaml
 #- argocd/instances/ibm-license-service-instance.yaml
 
