--- a/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-cp4a-operator.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-cp4a-operator.yaml
@@ -19,7 +19,7 @@ spec:
     repoURL: "" # Populated by kustomize patches in 2-services/kustomization.yaml
     targetRevision: "" # Populated by kustomize patches in 2-services/kustomization.yaml
     path: operators/ibm-cp4a-operator
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+  syncPolicy: {}
+    # automated:
+    #   prune: true
+    #   selfHeal: true
