--- a/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-catalogs.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-catalogs.yaml
@@ -74,10 +74,10 @@ spec:
                 updateStrategy:
                   registryPoll:
                     interval: 45m
-  syncPolicy: {}
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
   
   
   
